--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <header>HUS INDEX</header>
-    <div class="filters"> <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-        <button class="btn" onclick="filterSelection('cars')"> Recent</button>
-        <button class="btn" onclick="filterSelection('animals')"> Price High to Low</button>
-        <button class="btn" onclick="filterSelection('fruits')"> Price Low to High</button>
+    <div class="filters"> 
+        <!-- <button class="btn active" onclick="filterSelection('all')"> Show all</button> -->
+        <button class="btn" id="Recent"> Recent</button>
+        <button class="btn" id="High"> Price High to Low</button>
+        <button class="btn" id="Low"> Price Low to High</button>
     <div class="houseContainer">
         <!-- Hus kommer att läggas till här dynamiskt via JavaScript -->
     </div>
